--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -4,14 +4,47 @@ on:
   push:
     branches:
       - 'add-workflow'
+env:
+  PYTHON_VENV: ${{ github.workspace }}/.venv
+  APP_SRC_DIR: ${{ github.workspace }}/src/hello-app
 jobs:
-  build:
+  setup_environment:
     runs-on: ubuntu-latest
     steps:
-      - run: echo "Starting Job ${{github.job}}"
+      - run: |
+          echo "Starting Job ${{github.job}}"
       - name: Check out repository code
         uses: actions/checkout@v4
-      - name: Get cwd and github workspace
+      - name: Set up Python 3.10
+        uses: actions/setup-python@v3
+        with:
+          python-version: "3.10"
+      - name: Install main dependencies
         run: |
-          pwd && dir ${{ github.workspace }}
-      - run: echo "Job finished with status ${{ job.status }}."
+          python -m pip install --upgrade pip
+          pip install --upgrade venv
+      - name: Setup Python virtual environment
+        run: |
+          python -m venv ${{env.PYTHON_VENV}}
+          source ${{env.PYTHON_VENV}}/bin/activate
+      - name: Install job specific dependencies
+        run: |
+          python -m pip install --upgrade pip
+          pip install flake8 build
+      - name: Lint with flake8
+        run: |
+          # stop the build if there are Python syntax errors or undefined names
+          flake8 ${{env.APP_SRC_DIR}} --count --show-source --max-line-length=80 --statistics
+      - name: Build pacakage
+        run: |
+          python -m build ${{env.APP_SRC_DIR}}
+      - name: List created packages
+        run: |
+          ls ${{env.APP_SRC_DIR}}/dist
+      - name: Cleanup environment
+        run: |
+          deactivate
+          rm -rf ${{env.APP_SRC_DIR}}/dist
+          rm -rf ${{env.PYTHON_VENV}}
+      - run: |
+          echo "Job ${{github.job}} finished with status ${{ job.status }}."
