--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -8,7 +8,7 @@ env:
   PYTHON_VENV: ${{ github.workspace }}/.venv
   APP_SRC_DIR: ${{ github.workspace }}/src/hello-app
 jobs:
-  setup_environment:
+  build:
     runs-on: ubuntu-latest
     steps:
       - run: |
@@ -22,7 +22,7 @@ jobs:
       - name: Install main dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install venv
+          pip install virtualenv
       - name: Setup Python virtual environment
         run: |
           python -m venv ${{env.PYTHON_VENV}}
