--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -30,12 +30,7 @@ jobs:
             build
       - name: Debug outputs from ./.github/actions/setup-env
         run: |
-          echo ${{ steps.use-setup-action.outputs.*.value }}
-          # echo ${{ steps.use-setup-action.outputs.python-version }}
-          # echo ${{ steps.use-setup-action.outputs.global-python-path }}
-          # echo ${{ steps.use-setup-action.outputs.pipenv-python-path }}
-          # echo ${{ steps.use-setup-action.outputs.pipenv-venv-path }}
-          # echo ${{ steps.use-setup-action.outputs.pipenv-project-path }}
+          echo ${{ toJson(steps.use-setup-action.outputs) }}
       - name: Lint with flake8
         run: |
           # stop the build if there are Python syntax errors or undefined names
