--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -4,7 +4,7 @@ on:
   push
 env:
   APP_NAME: hello-app
-  PACKAGE_NAME_PREFIX_PATTERN: hello_app-[0-9].[0-9]
+  PACKAGE_PREFIX_PATTERN: hello_app-[0-9].[0-9]
 permissions:
   contents: read
 jobs:
@@ -13,57 +13,38 @@ jobs:
     env:
       APP_SRC_DIR: ${{ github.workspace }}/src/$APP_NAME
       BUILD_DIST_DIR: ${{ github.workspace }}/build-artifacts
+      PACKAGE_COMMON_PATTERN: $BUILD_DIST_DIR/$PACKAGE_PREFIX_PATTERN
     steps:
       - run: |
           echo "Starting Job ${{github.job}}"
       - name: Check out repository code
         uses: actions/checkout@v4
-      - name: Setup environment
-        id: use-setup-action
-        uses: ./.github/actions/setup-env
+      - name: Build Python packages
+        id: build-packages-action
+        uses: ./.github/actions/build-packages
         with:
-          setup-python: true
-          python-version: '3.10'
-          use-pipenv: true
-          python-dependencies:
-            flake8
-            build
-      - name: Debug outputs from ./.github/actions/setup-env
-        run: |
-          echo '${{ toJson(steps.use-setup-action.outputs) }}'
-      - name: Lint with flake8
-        run: |
-          # stop the build if there are Python syntax errors or undefined names
-          pipenv run flake8 $APP_SRC_DIR --count --show-source --max-line-length=80 --statistics
-      - name: Build package
-        run: |
-          pipenv run python -m build -o $BUILD_DIST_DIR $APP_SRC_DIR
-      - name: List created packages
-        run: |
-          ls $BUILD_DIST_DIR
-      - name: Upload build artifacts
-        uses: actions/upload-artifact@v4
-        with:
-          name: app-packages
-          path: |
-            ${{env.BUILD_DIST_DIR}}/${{env.PACKAGE_NAME_PREFIX_PATTERN}}*.whl
-            ${{env.BUILD_DIST_DIR}}/${{env.PACKAGE_NAME_PREFIX_PATTERN}}*.tar.gz
-          if-no-files-found: error
-          retention-days: 1
-          overwrite: true
+          app-src-dir: ${{ env.APP_SRC_DIR }}
+          build-output-dir: ${{ env.BUILD_DIST_DIR }}
+          package-name-patterns: |
+            ${{ env.PACKAGE_COMMON_PATTERN }}*.whl
+            ${{ env.PACKAGE_COMMON_PATTERN }}*.tar.gz
       - name: Cleanup environment
-        run: |
-          rm -rf $BUILD_DIST_DIR
-          pipenv uninstall --all --clear
-          pipenv --rm
-          rm -f Pipfile*
+        uses: ./.github/actions/cleanup-env
+        with:
+          rm-dirs: ${{ env.BUILD_DIST_DIR }}
+          clean-pipenv: true
       - run: |
           echo "Job ${{github.job}} finished with status ${{ job.status }}."
+    outputs:
+      artifact-name: ${{ steps.build-packages-action.outputs.artifact-name }}
 
 
   test:
     runs-on: ubuntu-latest
     needs: build
+    strategy:
+      matrix:
+        package_pattern: ["*.whl", "*.tar.gz"]
     env:
       APP_TEST_DIR: ${{ github.workspace }}/src/pytest
       ARTIFACTS_DIR: ${{ github.workspace }}/artifacts
@@ -73,43 +54,24 @@ jobs:
         echo "Starting Job ${{github.job}}"
     - name: Check out repository code
       uses: actions/checkout@v4
-    - name: Setup environment
-      id: use-setup-action
-      uses: ./.github/actions/setup-env
+    - name: Test Python package
+      id: test-package-action
+      uses: ./.github/actions/test-package
       with:
-        setup-python: true
-        python-version: '3.10'
-        use-pipenv: true
-        python-dependencies:
-          pytest
-          coverage
-    - name: Debug outputs from ./.github/actions/setup-env
-      run: |
-        echo '${{ toJson(steps.use-setup-action.outputs) }}'
-    - name: Download artifacts to test
-      uses: actions/download-artifact@v4
-      with:
-        name: app-packages
-        path: ${{env.ARTIFACTS_DIR}}
-    - name: List downloaded artifacts
-      run: |
-        ls -R $ARTIFACTS_DIR
-    - name: Install app package into pipenv
-      run: |
-        pipenv install $ARTIFACTS_DIR/$PACKAGE_NAME_PREFIX_PATTERN*.whl
-    - name: Run pytest and coverage
-      run: |
-        mkdir $PYTEST_ROOT_DIR
-        pipenv run coverage run --branch --source=$importable_name -m \
-          pytest -v --cache-clear --rootdir $PYTEST_ROOT_DIR $APP_TEST_DIR
-        pipenv run coverage report
-      env:
-        importable_name: hello
+        app-test-dir: ${{ env.APP_TEST_DIR }}
+        pytest-root-dir: ${{ env.PYTEST_ROOT_DIR }}
+        artifacts-dir: ${{ env.ARTIFACTS_DIR }}
+        package-name-pattern: |
+          "${{ env.PACKAGE_PREFIX_PATTERN }}${{ matrix.package_pattern }}"
+        artifact-name: ${{ needs.build.outputs.artifact-name }}
+        coverage: true
+        coverage-importable-name: hello
     - name: Cleanup environment
-      run: |
-        rm -rf $ARTIFACTS_DIR $PYTEST_ROOT_DIR
-        pipenv uninstall --all --clear
-        pipenv --rm
-        rm -f Pipfile*
+      uses: ./.github/actions/cleanup-env
+      with:
+        rm-dirs: 
+          ${{ env.ARTIFACTS_DIR }}
+          ${{ env.PYTEST_ROOT_DIR }}
+        clean-pipenv: true
     - run: |
         echo "Job ${{github.job}} finished with status ${{ job.status }}."
