--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -29,7 +29,7 @@ jobs:
             ${{ env.package_common_pattern }}*.tar.gz
         env:
           APP_SRC_DIR: ${{ github.workspace }}/src/${{ env.APP_NAME }}
-          package_common_pattern: |
+          package_common_pattern:
             ${{ env.BUILD_DIST_DIR }}/${{ env.PACKAGE_PREFIX_PATTERN }}
       - name: Cleanup environment
         uses: ./.github/actions/cleanup-env
