--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,117 +1,81 @@
 name: build-pipeline
-run-name: Run ${{github.run_number}} on ref ${{github.ref_name}}, user ${{ github.actor }}
-on: 
+run-name: |
+  Run ${{ github.run_number }} on ${{ github.ref_name }} by ${{ github.actor }}
+on:
   push
 env:
   APP_NAME: hello-app
-  PACKAGE_NAME_PREFIX_PATTERN: hello_app-[0-9].[0-9]
+  PACKAGE_PREFIX_PATTERN: hello_app-[0-9].[0-9]
 permissions:
   contents: read
 jobs:
   build:
     runs-on: ubuntu-latest
     env:
-      APP_SRC_DIR: ${{ github.workspace }}/src/$APP_NAME
       BUILD_DIST_DIR: ${{ github.workspace }}/build-artifacts
     steps:
       - run: |
-          echo "Starting Job ${{github.job}}"
+          echo "Starting Job ${{ github.job }}"
       - name: Check out repository code
         uses: actions/checkout@v4
-      - name: Set up Python 3.10
-        uses: actions/setup-python@v5
+      - name: Build Python packages
+        id: build-packages-action
+        uses: ./.github/actions/build-packages
         with:
-          python-version: "3.10"
-      - name: Install main dependencies
-        run: |
-          python3 -m pip install --upgrade pip
-          python3 -m pip install pipenv
-      - name: Setup Python virtual environment
-        run: |
-          pipenv install
-      - name: Install job specific dependencies
-        run: |
-          pipenv install flake8 build
-      - name: Lint with flake8
-        run: |
-          # stop the build if there are Python syntax errors or undefined names
-          pipenv run flake8 $APP_SRC_DIR --count --show-source --max-line-length=80 --statistics
-      - name: Build pacakage
-        run: |
-          pipenv run python -m build -o $BUILD_DIST_DIR $APP_SRC_DIR
-      - name: List created packages
-        run: |
-          ls $BUILD_DIST_DIR
-      - name: Upload build artifacts
-        uses: actions/upload-artifact@v4
-        with:
-          name: app-packages
-          path: |
-            ${{env.BUILD_DIST_DIR}}/${{env.PACKAGE_NAME_PREFIX_PATTERN}}*.whl
-            ${{env.BUILD_DIST_DIR}}/${{env.PACKAGE_NAME_PREFIX_PATTERN}}*.tar.gz
-          if-no-files-found: error
-          retention-days: 1
-          overwrite: true
+          app-src-dir: ${{ env.APP_SRC_DIR }}
+          build-output-dir: ${{ env.BUILD_DIST_DIR }}
+          package-name-patterns: |
+            ${{ env.package_common_pattern }}*.whl
+            ${{ env.package_common_pattern }}*.tar.gz
+        env:
+          APP_SRC_DIR: ${{ github.workspace }}/src/${{ env.APP_NAME }}
+          package_common_pattern:
+            ${{ env.BUILD_DIST_DIR }}/${{ env.PACKAGE_PREFIX_PATTERN }}
       - name: Cleanup environment
-        run: |
-          rm -rf $BUILD_DIST_DIR
-          pipenv uninstall --all --clear
-          pipenv --rm
-          rm -f Pipfile*
+        uses: ./.github/actions/cleanup-env
+        with:
+          rm-dirs: ${{ env.BUILD_DIST_DIR }}
+          clean-pipenv: true
       - run: |
-          echo "Job ${{github.job}} finished with status ${{ job.status }}."
+          echo "Job ${{ github.job }} finished with status ${{ job.status }}."
+    outputs:
+      artifact-name: ${{ steps.build-packages-action.outputs.artifact-name }}
 
 
   test:
     runs-on: ubuntu-latest
     needs: build
+    strategy:
+      matrix:
+        package_pattern: ["*.whl", "*.tar.gz"]
     env:
-      APP_TEST_DIR: ${{ github.workspace }}/src/pytest
       ARTIFACTS_DIR: ${{ github.workspace }}/artifacts
       PYTEST_ROOT_DIR: ${{ github.workspace }}/pytest-root
     steps:
     - run: |
-        echo "Starting Job ${{github.job}}"
+        echo "Starting Job ${{ github.job }}"
     - name: Check out repository code
       uses: actions/checkout@v4
-    - name: Set up Python 3.10
-      uses: actions/setup-python@v5
+    - name: Test Python package
+      id: test-package-action
+      uses: ./.github/actions/test-package
       with:
-        python-version: "3.10"
-    - name: Install main dependencies
-      run: |
-        python3 -m pip install --upgrade pip
-        python3 -m pip install pipenv
-    - name: Setup Python virtual environment
-      run: |
-        pipenv install
-    - name: Install job specific dependencies
-      run: |
-        pipenv install pytest coverage
-    - name: Download artifacts to test
-      uses: actions/download-artifact@v4
-      with:
-        name: app-packages
-        path: ${{env.ARTIFACTS_DIR}}
-    - name: List downloaded artifacts
-      run: |
-        ls -R $ARTIFACTS_DIR
-    - name: Install app package into pipenv
-      run: |
-        pipenv install $ARTIFACTS_DIR/$PACKAGE_NAME_PREFIX_PATTERN*.whl
-    - name: Run pytest and coverage
-      run: |
-        mkdir $PYTEST_ROOT_DIR
-        pipenv run coverage run --branch --source=$importable_name -m \
-          pytest -v --cache-clear --rootdir $PYTEST_ROOT_DIR $APP_TEST_DIR
-        pipenv run coverage report
+        app-test-dir: ${{ env.APP_TEST_DIR }}
+        pytest-root-dir: ${{ env.PYTEST_ROOT_DIR }}
+        artifacts-dir: ${{ env.ARTIFACTS_DIR }}
+        package-name-pattern:
+          ${{ env.PACKAGE_PREFIX_PATTERN }}${{ matrix.package_pattern }}
+        artifact-name: ${{ needs.build.outputs.artifact-name }}
+        coverage: true
+        coverage-importable-name: hello
       env:
-        importable_name: hello
+        APP_TEST_DIR: ${{ github.workspace }}/src/pytest
     - name: Cleanup environment
-      run: |
-        rm -rf $ARTIFACTS_DIR $PYTEST_ROOT_DIR
-        pipenv uninstall --all --clear
-        pipenv --rm
-        rm -f Pipfile*
+      uses: ./.github/actions/cleanup-env
+      with:
+        rm-dirs:
+          ${{ env.ARTIFACTS_DIR }}
+          ${{ env.PYTEST_ROOT_DIR }}
+        clean-pipenv: true
     - run: |
-        echo "Job ${{github.job}} finished with status ${{ job.status }}."
+        echo "Job ${{ github.job }} finished with status ${{ job.status }}."
