Testibg release workflow before merging to default branch

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -14,7 +14,7 @@ on:
         type: string
         default: main
 permissions:
-  contents: read
+  contents: write
 jobs:
   build-pipeline:
     uses: ./.github/workflows/build-pipeline.yml
