Testibg release workflow before merging to default branch

--- a/.github/workflows/release-test.yml
+++ b/.github/workflows/release-test.yml
@@ -3,8 +3,8 @@ run-name: |
   Run ${{ github.run_number }} on ${{ github.ref_name }} by ${{ github.actor }}
 on:
   push
-permissions:
-  contents: read
+# permissions:
+#   contents: read
 jobs:
   release-pipeline:
     uses: ./.github/workflows/release.yml
