--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -41,7 +41,7 @@ jobs:
       - name: Create release draft
         run: |
           gh release create v${{ inputs.version }} --generate-notes -d \
-            --target HEAD
+            --target release/v${{ inputs.version }}
         env:
           GH_TOKEN: ${{ github.token }}
       # prepare assets
