Testibg release workflow before merging to default branch

--- a/.github/actions/build-packages/action.yml
+++ b/.github/actions/build-packages/action.yml
@@ -124,8 +124,9 @@ runs:
       id: get-package-name-patterns
       run: |
         full_patterns="$(echo '${{ inputs.package-name-patterns }}' | \
-          tr -s '\n' | tr '\n' ' ' | tr -s ' ' | \
+          tr '\n' ' ' | tr -s ' ' | \
           sed 's/[[:space:]]/\", \"/')"
         echo "package-name-patterns="[\"${full_patterns}\"]"" \
           >> $GITHUB_OUTPUT
+        echo "package-name-patterns="[\"${full_patterns}\"]""
       shell: bash
